--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 absl-py==2.1.0
+annotated-types==0.6.0
+anyio==4.3.0
 arabic-reshaper==3.0.0
 asn1crypto==1.5.1
 astunparse==1.6.3
@@ -13,13 +15,17 @@ cryptography==42.0.5
 cssselect2==0.7.0
 cycler==0.12.1
 et-xmlfile==1.1.0
+exceptiongroup==1.2.0
+fastapi==0.110.1
 flatbuffers==24.3.25
 fonttools==4.50.0
 gast==0.5.4
 google-pasta==0.2.0
 grpcio==1.62.1
+h11==0.14.0
 h5py==3.10.0
 html5lib==1.1
+httptools==0.6.1
 idna==3.6
 keras==3.1.1
 kiwisolver==1.4.5
@@ -44,6 +50,8 @@ pillow==10.2.0
 protobuf==4.25.3
 pyarrow==15.0.0
 pycparser==2.22
+pydantic==2.7.0
+pydantic_core==2.18.1
 Pygments==2.17.2
 pyHanko==0.23.2
 pyhanko-certvalidator==0.26.3
@@ -52,6 +60,8 @@ pypdf==4.1.0
 pypng==0.20220715.0
 python-bidi==0.4.2
 python-dateutil==2.8.2
+python-dotenv==1.0.1
+python-multipart==0.0.9
 pytz==2024.1
 PyYAML==6.0.1
 pyzbar==0.1.9
@@ -60,6 +70,8 @@ reportlab==4.0.9
 requests==2.31.0
 rich==13.7.1
 six==1.16.0
+sniffio==1.3.1
+starlette==0.37.2
 svglib==1.5.1
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
@@ -73,7 +85,10 @@ tzdata==2024.1
 tzlocal==5.2
 uritools==4.0.2
 urllib3==2.2.1
+uvicorn==0.29.0
+watchfiles==0.21.0
 webencodings==0.5.1
+websockets==12.0
 Werkzeug==3.0.2
 wrapt==1.16.0
 xhtml2pdf==0.2.15
